/*
 * Copyright (C) 2006 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "android.content";
option java_multiple_files = true;

package android.content;

import "frameworks/base/core/proto/android/app/window_configuration.proto";
import "frameworks/base/core/proto/android/content/locale.proto";

/**
 * An android resource configuration.
 */
message ConfigurationProto {
  float font_scale = 1;
  uint32 mcc = 2;
  uint32 mnc = 3;
  repeated LocaleProto locales = 4;
  uint32 screen_layout = 5;
  uint32 touchscreen = 6;
  uint32 keyboard_hidden = 7;
  uint32 hard_keyboard_hidden = 8;
  uint32 navigation = 9;
  uint32 navigation_hidden = 10;
  uint32 orientation = 11;
  uint32 ui_mode = 12;
  uint32 screen_width_dp = 13;
  uint32 screen_height_dp = 14;
  uint32 smallest_screen_width_dp = 15;
  uint32 density_dpi = 16;
  .android.app.WindowConfigurationProto window_configuration = 17;
}

